--- a/source/7.tex
+++ b/source/7.tex
@@ -77,13 +77,13 @@
     \int\limits_a^b f(x)dx = \int\limits_a^c f(x)dx - \int\limits_b^c f(x)dx  \Rightarrow \int\limits_a^b f(x)dx = \int\limits_a^c f(x)dx + \int\limits_c^b f(x)dx $ \\ [2mm]
     Аналогично доказывается для $ c < a < b$. \\ [2mm]
     
-   \textbf{Свойство 7}\\[5mm] Пусть $f$ ограничена на $(a,b], \forall \alpha > 0: 0<\alpha<b-a, f $ интегрируема на $[\alpha+a, b]$,тогда при любом доопределении $f$ в точке $a$, получится функция, интегрируемая на $[a,b]$ и $\int\limits_a^b f(x) dx = \lim \limits_{\alpha \rightarrow 0} \int\limits_{a+\alpha}^b f(x)dx$\\[2mm] 
+   \textbf{Свойство 7}\\[5mm] Пусть $f$ ограничена на $(a,b], \forall \alpha > 0: ~ 0<\alpha<b-a, f $ интегрируема на $[\alpha+a, b]$,тогда при любом доопределении $f$ в точке $a$, получится функция, интегрируемая на $[a,b]$ и $\int\limits_a^b f(x) dx = \lim \limits_{\alpha \rightarrow 0} \int\limits_{a+\alpha}^b f(x)dx$\\[2mm] 
    \textbf{Доказательство:}\\[2mm]
     $\exists A>0: \forall x \in (a,b] \longmapsto |f(x)|\leq A, f(a) = B$\\[2mm]
     $M = max\{A, |B|\} \Rightarrow \forall x \in [a,b], |f(x)|\leq M$\\[2mm]
     $\forall\varepsilon > 0 \exists \alpha = \alpha(\varepsilon):2M\alpha< \varepsilon/2$\\ [2mm]
     Для $[a+\alpha, b]$ найдется такое  $\exists T: \overline{S_T}- \underline{S_T}< \varepsilon/2$\\[2mm]
-    $\exists T' = T \cup \{a\}, \overline{S_{T'}}- \underline{S_{T'}}= \overline{S_T}- \underline{S_T}-(M_0-m_0)\alpha<\varepsilon/2+2M\alpha<\varepsilon/2+\varepsilon/2=\varepsilon $\\[5mm]
+    $\exists T' = T \cup \{a\}, \overline{S_{T'}}- \underline{S_{T'}}= \overline{S_T}- \underline{S_T}+(M_0-m_0)\alpha<\varepsilon/2+2M\alpha<\varepsilon/2+\varepsilon/2=\varepsilon $\\[5mm]
 \subsection*{Оценки определенного интеграла:}   
 \textbf{Оценка 1:}\\[2mm]
     $f$  интегрируема на $[a,b] \And f(x)\geq 0\forall x \in [a,b]\Rightarrow \int\limits_a^b f(x)dx$\\[2mm]
